http-logger/base/http-logger-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-logger-service
  namespace: http-logger
  labels:
    app: http-logger
spec:
  selector:
    app: http-logger
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9001
