http-logger/base/http-logger-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: http-logger-route
  namespace: http-logger
  labels:
    app: http-logger
spec:
  path: /
  to:
    kind: Service
    name: http-logger-service
    weight: 100
  port:
    targetPort: 9001
  wildcardPolicy: None
